# volleyball_analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py
backend/app/application/: exeptions.py
backend/app/application/commands/: end_match.py  record_event.py  request_advice.py  start_match.py
backend/app/application/ports/: event_bus.py  repository.py  uow.py  websocket_publisher.py
backend/app/application/queries/: dto.py  matches.py
backend/app/application/services/: advice_service.py  context_builder.py  prompt_templates.py
backend/app/domain/: enums.py  events.py
backend/app/domain/entities/: matches.py
backend/app/domain/values/: base.py  composites.py  identifiers.py  primitives.py  timestamps.py
backend/app/infrastructure/event_bus/: encoder.py  kafka_bus.py  rabbitmq_bus.py
backend/app/infrastructure/repositories/: match_repositories.py
backend/app/infrastructure/uow/: postgres_uow.py
backend/app/interfaces/rabbitmq_handlers/: base.py  get_live_handlers.py
backend/app/web/: deps.py  lifespan.py  main.py
backend/app/web/routers/: __init__.py  matches.py  reports.py  ws.py
docs/: check_docker_services.txt
telegram_bot/: Dockerfile  pyproject.toml
telegram_bot/app/: api_client.py  config.py  deps.py  main.py  state.py
telegram_bot/app/handlers/: __init__.py  advice.py  common.py  events.py  match.py  start.py
telegram_bot/app/infrastructure/: api_adapter.py  client.py  models.py
telegram_bot/app/keyboards/: __init__.py  actions.py
(+34 files in other folders)
