[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "aiokafka>=0.13.0",
    "asynch>=0.3.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "granian>=2.7.1",
    "pydantic-settings>=2.12.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.14",
]


[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "I",
    "N",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
